--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quickshippy</title>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -19,7 +20,7 @@
             </nav>
             <section class="hero">
                 <div class="hero-text">
-                    <h1 class="head">
+                    <!-- <h1 class="head">
                         <span>The</span>
                         <div class="message">
                             <div>Fastast</div>
@@ -30,13 +31,8 @@
                     <h1>
                         way to deliver in-app
                         content to your users!
-                    </h1>
-
-
-
-
-
-
+                    </h1> -->
+<h1 id="app"></h1>
                     <p>We are making it super easy for Product, Marketing & Growth teams
                         to engage and better understand app users without any
                         input from the engineering team.</p>
@@ -186,6 +182,7 @@
         </footer>
 
     </div>
+    <script src="js/index.js"></script>
 
 </body>
 
