--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quickshippy</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/3.0.0-beta.6/aos.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/3.0.0-beta.6/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/3.0.0-beta.6/aos.js.map"></script>
+
+    <script src="https://unpkg.com/aos@3.0.0-beta.6/dist/aos.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -20,19 +25,7 @@
             </nav>
             <section class="hero">
                 <div class="hero-text">
-                    <!-- <h1 class="head">
-                        <span>The</span>
-                        <div class="message">
-                            <div>Fastast</div>
-                            <div>Easiast</div>
-                            <div>Simpliest</div>
-                        </div>
-                    </h1>
-                    <h1>
-                        way to deliver in-app
-                        content to your users!
-                    </h1> -->
-<h1 id="app"></h1>
+                    <h1 id="app"></h1>
                     <p>We are making it super easy for Product, Marketing & Growth teams
                         to engage and better understand app users without any
                         input from the engineering team.</p>
@@ -51,7 +44,7 @@
 
 
         <section class="one">
-            <div class="one-text">
+            <div class="one-text" data-aos="zooom-in">
                 <h1>Everything you need to improve
                     User Experience in one place</h1>
                 <p>Our visual editor helps you seamlessly create and deploy screens & features
@@ -60,9 +53,9 @@
                     surveys and more.
                 </p>
             </div>
-            <div class="one-sec">
+            <div class="one-sec" >
 
-                <div>
+                <div data-aos="zoom-in-left">
                     <div class="logo"><img src="images/download-solid.svg" alt=""></div>
                     <div class="header">
                         <h2>Install SDK</h2>
@@ -72,7 +65,7 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div data-aos="zoom-in-left">
                     <div class="logo"><img src="images/pen-nib-solid.svg" alt=""></div>
                     <div class="header">
                         <h2>Design and Build</h2>
@@ -81,7 +74,7 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div data-aos="zoom-in-right">
                     <div class="logo"><img src="images/desktop-solid.svg" alt=""></div>
                     <div class="header">
                         <h2>Preview Screen</h2>
@@ -90,7 +83,7 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div data-aos="zoom-in-right" >
                     <div class="logo"><img src="images/upload-solid.svg" alt=""></div>
                     <div class="header">
                         <h2>Publish</h2>
@@ -103,7 +96,7 @@
 
         </section>
         <section class="two">
-            <div class="two-text">
+            <div class="two-text" data-aos="fade-in">
                 <h1>Measure and optimize
                     user engagement & conversions</h1>
                 <p>See how your users engage with the deployed screens and features. We provide tools and intuitive
@@ -124,7 +117,7 @@
                     surveys and more.
                 </p>
             </div>
-            <div class="three-img">
+            <div class="three-img" data-aos="slide-up">
                 <img src="images/Measure 1.svg" alt="">
             </div>
 
@@ -146,13 +139,13 @@
                     <button>Survey</button>
                 </div>
             </div>
-            <div class="four-img">
+            <div class="four-img" data-aos="slide-left">
                 <img src="images/Onboarding 1.jpg" alt="">
             </div>
 
         </section>
         <div class="five">
-            <div class="new">
+            <div class="new" data-aos="zoom-in">
 
                 <h1>Ship Quickly- No more waiting for weeks to build,
                     tedious engineering dependency, app store approvals</h1>
@@ -173,9 +166,9 @@
                 <p>Privacy | Terms</p>
             </div>
             <div class="icon">
-               <div><img src="./images/facebook.svg" alt="" width="20px"></div>
+                <div><img src="./images/facebook.svg" alt="" width="20px"></div>
                 <div><img src="./images/instagram.svg" alt="" width="20px"></div>
-        <div><img src="./images/twitter (2).svg" alt="" width="20px"></div>
+                <div><img src="./images/twitter (2).svg" alt="" width="20px"></div>
                 <div><img src="./images/linkedin.svg" alt="" width="20px"></div>
 
             </div>
