--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="first">
 
             <nav>
-                <div><img src="images/quickshippy logo 1.svg" alt=""></div>
+                <div class="logo1"><img src="images/quickshippy logo 1.svg" alt=""></div>
                 <h2>Why Quickshippy?</h2>
             </nav>
             <section class="hero">
